2004-01-02  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof_options.cpp: use the proper type for options::demangle

2004-01-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/op_regex.cpp:
	* libregex/op_regex.h: tidy a bit private interface

2004-01-01  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_config.h:
	* gui/oprof_start_util.h:
	* libpp/symbol.h:
	* libutil++/cverb.cpp:
	* libutil++/cverb.h:
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp: move some #include <> from .h to .cpp

2004-01-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/op_regex.cpp: don't assume int('a') > int('0')

See ChangeLog-2003 for earlier changelogs.