@@ -1,6 +1,8 @@
 SUBDIRS = . tests
 
-AM_CPPFLAGS=-I ${top_srcdir}/libutil
+AM_CPPFLAGS= \
+	-I ${top_srcdir}/libutil \
+	-I ${top_srcdir}/libop
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
 noinst_LIBRARIES = libutil++.a
